--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,14 @@ html {
 
 .clock-center {
   bottom: calc(50% - 14px);
-  left: calc(50% -24px);
+  left: calc(50% - 24px);
   position: absolute;
   width: 28px;
 }
 
 .hand {
   bottom: calc(50% - 8px);
-  left: calc(50% -7px);
+  left: calc(50% - 7px);
   position: absolute;
   width: 14px;
 
@@ -41,3 +41,7 @@ html {
     transform: rotate(360deg);
   }
 }
+
+.hand-hour {
+  animation: 6s linear infinite;
+  }
